Compilator/gramatika.txt
program = { assignment ";" | procedure } main $ ;

main = "main" block ;

procedure = "procedure" ident block ;

block = "{" { statement ";" } "}" ;


assignment = variable [ "=" expression ];


statement = [ assignment
| ident "(" [ expression ] { "," expression } ")"
| "read" variable | "readNum" variable
| "write" expression 
| "if" "(" condition ")" block
| "while" "(" condition ")" block ] ;


condition = "odd" expression
| expression ( "==" | "<=" | ">=" | "<" | ">" | "!=" ) expression;


expression = term { ( "+" | "-" ) term } ;
term = factor { ( "*" | "/" ) factor };
factor = text | variable | number | "(" expression ")" ;

variable = "$" ident ;


ident = /[a-zA-Z]([a-zA-Z])+/ ;
text = /".*"/ ;
number = [ "+" | "-" ] /[0-9]{0,}/ ;

